<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dpo.buffetutn.Activities.Log_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_title"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_subtitle"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_buffet"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in_lbl_mail"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_mail_msg"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in_lbl_contraseña"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_contraseña_msg"
            android:inputType="textPassword"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkRecordarme"
            style="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_chk_recordarme" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnIngresar"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_btn_ingresar" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnRegistrar"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in_btn_registrar" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
