<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_title"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_subtitle"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_lbl_nombre"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_mail_msg"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_lbl_apellido"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_mail_msg"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblDni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_lbl_dni"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/dni"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_mail_msg"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_lbl_mail"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_mail_msg"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_lbl_contraseña"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/contraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_contraseña_msg"
            android:inputType="textPassword"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblConfirmarContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_lbl_confirmacion_contraseña"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.TextView" />

        <EditText
            android:id="@+id/confirmacionContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/log_in_txt_mail_msg"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.EditText" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/registro_btn_registrar"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </LinearLayout>

</LinearLayout>
